--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
-  <head>
-    <title>The Acme Users</title>
-    <script defer src="app.js"></script>
-  </head>
-  <body>
-    <h1>The Acme Users</h1>
-    <button id="loadButton">Load Users</button>
-    <button id="loadRandomButton">Load Random User</button>
-    <h1 id="randomH1"></h1>
-    <ul id="usersList"></ul>
-  </body>
+
+<head>
+  <title>The Acme Users</title>
+  <script defer src="app.js"></script>
+</head>
+
+<body>
+  <h1>The Acme Users</h1>
+  <button id="loadButton">Load Users</button>
+  <button id="loadRandomButton">Load Random User</button>
+  <button id="loadCompanyName">Load Company Names</button>
+  <h1 id="randomH1"></h1>
+  <ul id="usersList"></ul>
+  <ul id="companyNames"></ul>
+</body>
+
 </html>
